telegraf/prom/service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telegraf
spec:
  template:
    spec:
      containers:
      - name: telegraf
        ports:
        # outputs.prometheus_client
        - name: http
          containerPort: 9273
      - name: prom
        image: prom/prometheus
        ports:
        - containerPort: 9090
        volumeMounts:
        - name: prom-vol
          mountPath: /etc/prometheus
      volumes:
      - name: prom-vol
        configMap:
          name: telegraf
          items:
          - key: prometheus.yml
            path: prometheus.yml
