telegraf/prom/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: prom-tg
spec:
  rules:
  - host: prom-tg.default.uk8s.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: prom-tg
          servicePort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: prom-tg
  labels:
    app: telegraf
spec:
  type: ClusterIP
  ports:
  - port: 9090
    targetPort: 9090
  selector:
    app: telegraf
